--- a/public_website/applyAccomodation.html
+++ b/public_website/applyAccomodation.html
@@ -14,7 +14,7 @@
 				<div>
 				<form id="myForm">
 					Enter your application ID: <input
-						type="number" name="id" /> <br> Please enter your income: <input
+						type="number" name="id" /> <br><br> Please enter your income: <input
 						type="number" name="income" /> <br> Please enter your city
 					of permanent residency: <input type="text"
 						name="permanent_residency" /> <br> Please enter your years of
