--- a/public_website/changeInfo.html
+++ b/public_website/changeInfo.html
@@ -11,13 +11,14 @@
     </u>
     <form id="form">
     
-        ID: <input type="text" name="id"><br>    
+        ID: <input type="number" name="id"><br>    
         New Email: <input type="text" name="email"><br>
         New Phone number: <input type="text" name="phone_number"><br><br><br>
         
         <button type="submit" id="changeBtn">Change!</button>
         <script src="./changeInfo.js"></script>
     </form>
+    <p id="alert"></p>
 </section>
 <br>
 <br>
